# fastfold-agent-cli

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.api  LICENSE  README.md  docker-compose.yml  install.sh  pyproject.toml  skills-lock.json
.claude/skills/fold/: SKILL.md
.github/: README.md
.github/workflows/: ci.yml  docker-publish.yml  publish.yml
scripts/: prepare_datasets.py  prepare_l1000.py
src/: _version.py  cli.py
src/agent/: case_studies.py  claude_code_cli.py  config.py  deepagents_runtime.py  doctor.py  evidence_board.py  knowledge.py  loop.py  mcp_server.py  orchestrator.py  ptc_tools.py  runner.py  sandbox.py  session.py  skills.py  system_prompt.py  trace.py  trace_store.py  trajectory.py  types.py
src/api/: app.py  config.py  engine.py
src/ct/: __init__.py  cli.py
src/ct/agent/: case_studies.py  claude_code_cli.py  config.py  doctor.py  knowledge.py  loop.py  mcp_server.py  orchestrator.py  runner.py  runtime_adapters.py  sandbox.py  session.py  skills.py  system_prompt.py  trace_store.py  trajectory.py  types.py  workflows.py
src/ct/api/: __init__.py  app.py  config.py  engine.py
src/ct/data/: compute_providers.json  downloader.py  loaders.py
src/ct/kb/: __init__.py  benchmarks.py  governance.py  ingest.py  reasoning.py  schema_monitor.py  substrate.py
src/ct/models/: llm.py
src/ct/skills/fold/: SKILL.md
src/ct/skills/fold/references/: jobs.yaml
src/ct/skills/fold/scripts/: create_job.py  download_cif.py  fetch_results.py  get_viewer_link.py  wait_for_completion.py  wait_for_evolla_linked.py  wait_for_openmm_linked.py
src/ct/skills/md_openmm_calvados/: SKILL.md
src/ct/skills/md_openmm_calvados/references/: auth_and_api.md
src/ct/skills/md_openmm_calvados/scripts/: _api.py  extract_frame.py  fetch_results.py  submit_from_fold_job.py  submit_from_workflow.py  submit_from_yml_refs.py  submit_manual_af_pae.py  toggle_public.py  wait_for_workflow.py
src/ct/skills/md_openmmdl/: SKILL.md  __init__.py
src/ct/skills/md_openmmdl/scripts/: __init__.py  _api.py  execute_workflow.py  extract_frame.py  fetch_results.py  prepare_script.py  submit_from_workflow.py  submit_manual_topology_ligands.py  toggle_public.py  wait_for_workflow.py
src/ct/skills/md_simulation/: SKILL.md
src/ct/skills/md_simulation/references/: auth_and_api.md  schema_summary.md
src/ct/skills/md_simulation/scripts/: _api.py  extract_frame.py  fetch_results.py  submit_from_fold_job.py  submit_from_workflow.py  submit_from_yml_refs.py  submit_manual_af_pae.py  toggle_public.py  wait_for_workflow.py
src/ct/skills/protein_design_boltzgen/: SKILL.md  __init__.py
src/ct/skills/protein_design_boltzgen/scripts/: __init__.py  workflow_api.py
src/ct/skills/skill_creator/: __init__.py
src/ct/skills/skill_creator/scripts/: __init__.py  package_skill.py
src/ct/tools/: __init__.py  _compound_resolver.py  biomarker.py  cellxgene.py  chemistry.py  claude.py  clinical.py  clue.py  code.py  combination.py  compute.py  cro.py  data_api.py  design.py  dna.py  experiment.py  expression.py  files.py  genomics.py  imaging.py  intel.py  literature.py  network.py  notification.py  omics.py  ops.py  parity.py  pk.py  protein.py  regulatory.py  remote_data.py  report.py  repurposing.py  safety.py  shell.py  singlecell.py  skills.py  statistics.py  structure.py  target.py  (+2 more)
src/ct/ui/: markdown.py  status.py  suggestions.py  terminal.py  traces.py
src/data/: cro_database.json  downloader.py  loaders.py
src/kb/: __init__.py  benchmarks.py  ingest.py  reasoning.py  schema_monitor.py
src/models/: llm.py
src/reports/: __init__.py  html.py  notebook.py
src/skills/find_skills/: SKILL.md
src/skills/skill_creator/: SKILL.md
src/skills/skill_creator/scripts/: init_skill.py  quick_validate.py
src/tools/: __init__.py  _compound_resolver.py  biomarker.py  cellxgene.py  chemistry.py  claude.py  clinical.py  clue.py  code.py  combination.py  compute.py  cro.py  data_api.py  design.py  dna.py  experiment.py  expression.py  files.py  genomics.py  http_client.py  imaging.py  intel.py  literature.py  network.py  notification.py  omics.py  ops.py  parity.py  pk.py  protein.py  regulatory.py  remote_data.py  report.py  repurposing.py  safety.py  shell.py  singlecell.py  skills.py  statistics.py  structure.py  (+3 more)
src/ui/: markdown.py  status.py  terminal.py  traces.py
tests/: conftest.py  env_flags.py  test_agent_misc.py  test_agent_skills_bulk.py  test_api_app.py  test_api_config.py  test_api_engine.py  test_api_smoke.py  test_case_studies.py  test_cellxgene.py  test_chemistry_bulk.py  test_chemistry_new.py  test_claude.py  test_claude_code_cli.py  test_claude_sdk_cli_path.py  test_cli.py  test_cli_bulk_helpers.py  test_cli_commands.py  test_cli_commands_more.py  test_cli_coverage_push.py  test_cli_extended.py  test_cli_openai_helpers.py  test_cli_setup_skills.py  test_clue.py  test_code.py  test_code_agent_loop.py  test_code_files_bulk.py  test_combination.py  test_compound_resolver.py  test_compute.py  test_config.py  test_coverage_misc.py  test_cro.py  test_data_api.py  test_data_api_extended.py  test_data_api_service.py  test_deepagents_runtime.py  test_design.py  test_dna.py  test_doctor.py  (+82 more)
tests/fixtures/: plan_snapshot.txt  trace_snapshot.txt
