[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastfold-agent-cli"
version = "0.0.26"
description = "Fastfold CLI — An autonomous agent for drug discovery research"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Fastfold AI Corp." }]

dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "anthropic>=0.74.0",
    "openai>=1.0",
    "claude-agent-sdk>=0.1",
    "httpx>=0.27",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "python-dotenv>=1.0",
    "markdown>=3.5",
    "nbformat>=5.7",
]

[project.optional-dependencies]
notebook = ["nbconvert>=7.0"]
chemistry = ["rdkit>=2023.03"]
biology = ["biopython>=1.81"]
singlecell = [
    "scanpy>=1.9",
    "anndata>=0.10",
    "celltypist>=1.6",
    "cellxgene-census>=1.0",
    "tiledbsoma>=1.0",
]
ml = ["torch>=2.0", "transformers>=4.40", "fair-esm>=2.0"]
analysis = ["seaborn>=0.13", "scikit-learn>=1.3"]
api = ["fastapi>=0.100", "uvicorn[standard]>=0.20", "duckdb>=1.0"]
all = [
    "rdkit>=2023.03",
    "biopython>=1.81",
    "scanpy>=1.9",
    "anndata>=0.10",
    "celltypist>=1.6",
    "cellxgene-census>=1.0",
    "tiledbsoma>=1.0",
    "torch>=2.0",
    "transformers>=4.40",
    "fair-esm>=2.0",
    "seaborn>=0.13",
    "scikit-learn>=1.3",
]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5"]

[dependency-groups]
full = [
    "nbconvert>=7.0",
    "rdkit>=2023.03",
    "biopython>=1.81",
    "scanpy>=1.9",
    "anndata>=0.10",
    "celltypist>=1.6",
    "cellxgene-census>=1.0",
    "tiledbsoma>=1.0",
    "seaborn>=0.13",
    "scikit-learn>=1.3",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "duckdb>=1.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
fastfold = "ct.cli:entry"

# Skill console scripts — exposed on PATH after `uv tool install` so agents
# don't have to hunt for the right Python. These are thin wrappers around the
# bundled modules in ct.skills.md_simulation.scripts.*
fastfold-md-submit-from-fold-job = "ct.skills.md_simulation.scripts.submit_from_fold_job:main"
fastfold-md-submit-manual-af-pae = "ct.skills.md_simulation.scripts.submit_manual_af_pae:main"
fastfold-md-submit-from-workflow = "ct.skills.md_simulation.scripts.submit_from_workflow:main"
fastfold-md-submit-from-yml-refs = "ct.skills.md_simulation.scripts.submit_from_yml_refs:main"
fastfold-md-fetch-uniprot = "ct.skills.md_simulation.scripts.fetch_uniprot:main"
fastfold-md-wait-for-workflow = "ct.skills.md_simulation.scripts.wait_for_workflow:main"
fastfold-md-fetch-results = "ct.skills.md_simulation.scripts.fetch_results:main"
fastfold-md-toggle-public = "ct.skills.md_simulation.scripts.toggle_public:main"
fastfold-md-extract-frame = "ct.skills.md_simulation.scripts.extract_frame:main"

# fold skill console scripts (same pattern)
fastfold-fold-create-job = "ct.skills.fold.scripts.create_job:main"
fastfold-fold-wait-for-completion = "ct.skills.fold.scripts.wait_for_completion:main"
fastfold-fold-wait-for-evolla-linked = "ct.skills.fold.scripts.wait_for_evolla_linked:main"
fastfold-fold-wait-for-openmm-linked = "ct.skills.fold.scripts.wait_for_openmm_linked:main"
fastfold-fold-fetch-results = "ct.skills.fold.scripts.fetch_results:main"
fastfold-fold-download-cif = "ct.skills.fold.scripts.download_cif:main"
fastfold-fold-get-viewer-link = "ct.skills.fold.scripts.get_viewer_link:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ct"]
# hatchling includes all files under the package path, so skills/ data files
# (SKILL.md, scripts/, references/) are bundled automatically

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests hitting real APIs (use --run-e2e)",
    "docker: tests requiring Docker (use --run-e2e)",
    "e2e_matrix: optional live multi-prompt end-to-end matrix (set CT_RUN_E2E_MATRIX=1)",
    "api_smoke: optional live API smoke tests (set CT_RUN_API_SMOKE=1)",
]

[tool.uv]
package = true
default-groups = ["full"]
