[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastfold-agent-cli"
version = "0.0.53"
description = "Fastfold CLI — An autonomous agent for drug discovery research"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Fastfold AI Corp." }]

dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "anthropic>=0.74.0",
    "openai>=1.0",
    "claude-agent-sdk>=0.1",
    "httpx>=0.27",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "python-dotenv>=1.0",
    "markdown>=3.5",
    "nbformat>=5.7",
    "questionary>=2.1.1",
]

[project.optional-dependencies]
notebook = ["nbconvert>=7.0"]
chemistry = ["rdkit>=2023.03"]
biology = ["biopython>=1.81"]
singlecell = [
    "scanpy>=1.9",
    "anndata>=0.10",
    "celltypist>=1.6",
    "cellxgene-census>=1.0",
    "tiledbsoma>=1.0",
]
ml = ["torch>=2.0", "transformers>=4.40", "fair-esm>=2.0"]
analysis = ["seaborn>=0.13", "scikit-learn>=1.3"]
api = ["fastapi>=0.100", "uvicorn[standard]>=0.20", "duckdb>=1.0"]
# Same extras as ``all`` minus Census/Single Cell (``scanpy``, ``cellxgene-census``, ``tiledbsoma``)—
# omit those on native Windows (no usable ``tiledbsoma`` wheels). Prefer WSL2 + Ubuntu + ``[all]`` instead.
win_build = [
    "rdkit>=2023.03",
    "biopython>=1.81",
    "torch>=2.0",
    "transformers>=4.40",
    "fair-esm>=2.0",
    "seaborn>=0.13",
    "scikit-learn>=1.3",
]
all = [
    "rdkit>=2023.03",
    "biopython>=1.81",
    "scanpy>=1.9",
    "anndata>=0.10",
    "celltypist>=1.6",
    "cellxgene-census>=1.0",
    "tiledbsoma>=1.0",
    "torch>=2.0",
    "transformers>=4.40",
    "fair-esm>=2.0",
    "seaborn>=0.13",
    "scikit-learn>=1.3",
]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5"]

[dependency-groups]
full = [
    "nbconvert>=7.0",
    "rdkit>=2023.03",
    "biopython>=1.81",
    "scanpy>=1.9",
    "anndata>=0.10",
    "celltypist>=1.6",
    "cellxgene-census>=1.0",
    "tiledbsoma>=1.0",
    "seaborn>=0.13",
    "scikit-learn>=1.3",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "duckdb>=1.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
fastfold = "cli:entry"

# Note: skills are portable and self-contained. Their scripts are invoked
# directly (`python scripts/<name>.py ...`) from the skill directory, so they
# are no longer exposed as `skills.*` console entry points here.

[tool.hatch.build.targets.wheel]
packages = ["src/agent", "src/api", "src/data", "src/kb", "src/models", "src/reports", "src/skills", "src/tools", "src/ui"]

[tool.hatch.build.targets.wheel.force-include]
"src/cli.py" = "cli.py"
"src/_version.py" = "_version.py"
# hatchling includes all files under the package path, so skills/ data files
# (SKILL.md, scripts/, references/) are bundled automatically

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
markers = [
    "e2e: end-to-end tests hitting real APIs (use --run-e2e)",
    "docker: tests requiring Docker (use --run-e2e)",
    "e2e_matrix: optional live multi-prompt end-to-end matrix (set RUN_E2E_MATRIX=1)",
    "data_smoke: optional live public data-source smoke tests (set RUN_DATA_SMOKE=1)",
    "integration: interactive terminal tests requiring pexpect and a TTY",
]

[tool.coverage.run]
relative_files = true
# Statement coverage for the unit-test gate; branch coverage is tracked in reports
# but makes an 80% threshold unrealistic for Typer/CLI-heavy code.
branch = false

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.uv]
package = true
default-groups = ["full"]
